--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2"
+    "react-hook-form": "^7.53.2",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
